--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Website</title>
 </head>
 <body>
-    <p>New Project</p>
+    <h1>My Project:{Name}</h1>
+    <p>New Project </p>
+    <script>
+        var Name = "web Developers";
+        </script>
 </body>
 </html>
