--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>New project</title>
 </head>
 <body>
-    <h1>My Project:{Name}</h1>
-    <p>New Project </p>
-    <script>
-        var Name = "web Developers";
-        </script>
+    <h1>My Project{name}</h1>
+   <script>
+    const name = "developers";
+   </script>
 </body>
 </html>
