--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>New project</title>
 </head>
 <body>
-    <h1>My Project{name}</h1>
+    <h1>My Project</h1>
    <script>
     const name = "developers";
    </script>
